--- a/app.css
+++ b/app.css
@@ -14,6 +14,7 @@ body {
 
 #navbar h2{
     font-size: 1.3em;
+    color:#4d4e53;
 }
 
 header {
@@ -28,13 +29,19 @@ header {
     margin: 0px;
 }
 
-header h1{
+#main-doc h1{
+    text-align: center;
+    font-size: 3em;
+    font-weight: bolder;
+}
+
+#main-doc h2{
     font-size: 1.5em;
     font-weight: bold;
 }
 
 #main-doc h3{
-    font-size: 1em;
+    font-size: 1.2em;
     font-weight:500;
 }
 
@@ -61,16 +68,22 @@ header h1{
 }
 
 code {
-    display: block;
+    display:block;
     font-size: 0.69em;
     background-color: #f7f7f7;
     text-align: left;
-    position: relative;
+    /* position: relative; */
     white-space: pre-wrap;
-    word-break: break-all;
+    /* word-break: break-all; */
     word-wrap: normal;
     line-height: 2;
-    padding: 20px;
-    margin: 20px;
+    padding: 5px;
+    margin: 5px;
     border-radius: 5px;
+    width: 82vw;
+    outline: 2px solid rgb(230, 230, 230);
+}
+
+.inlineCode{
+    display: inline;
 }
